<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteSmoke"
    tools:context=".ui.profile.EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_edit_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:elevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_edit_account"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:background="@color/colorLightRed">

            <TextView
                style="@style/TextRegular"
                android:layout_gravity="center_horizontal"
                android:text="@string/edit_account"
                android:textColor="@color/colorWhite"
                android:textSize="20sp" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar_edit_account">

        <TextView
            android:id="@+id/textView6"
            style="@style/TextTitleSemiBold"
            android:layout_marginTop="20dp"
            android:text="@string/full_name" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_full_name_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_space"
            android:layout_marginEnd="@dimen/margin_space"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_full_name_edit_account"
                style="@style/editText"
                android:layout_margin="0dp"
                android:inputType="textPersonName" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView7"
            style="@style/TextTitleSemiBold"
            android:layout_marginTop="15dp"
            android:text="@string/email" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_email_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_space"
            android:layout_marginEnd="@dimen/margin_space"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email_edit_account"
                style="@style/editText"
                android:layout_margin="0dp"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/textView8"
            style="@style/TextTitleSemiBold"
            android:layout_marginTop="15dp"
            android:text="@string/no_hp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layout_input_no_hp_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_space"
            android:layout_marginEnd="@dimen/margin_space"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone_edit_account"
                style="@style/editText"
                android:layout_margin="0dp"
                android:inputType="phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginStart="@dimen/margin_space"
            android:text="@string/gender"
            style="@style/TextSemiBold" />

        <RadioGroup
            android:id="@+id/rg_gender_edit_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_space"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="@dimen/margin_space"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <RadioButton
                android:buttonTint="@color/colorLightRed"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:id="@+id/rb_men"
                style="@style/TextRegular"
                android:text="@string/men"/>

            <RadioButton
                android:buttonTint="@color/colorLightRed"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:id="@+id/rb_women"
                style="@style/TextRegular"
                android:text="@string/women"/>
        </RadioGroup>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_space"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_save_edit_account"
            style="@style/ButtonGradient"
            android:layout_width="match_parent"
            android:text="@string/save"
            android:visibility="visible" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/sh_save_edit_account"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/login"
            android:visibility="gone">

            <RelativeLayout
                style="@style/ButtonGradient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="45dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="@font/poppins_semi_bold"
                    android:text="@string/please_wait"
                    android:textColor="@color/colorWhite"
                    android:textSize="14sp" />
            </RelativeLayout>

        </com.facebook.shimmer.ShimmerFrameLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>