<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhiteSmoke"
    tools:context=".auth.RegisterActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/colorWhiteSmoke"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_register">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                style="@style/TextTitleHeaderRegular"
                android:layout_gravity="center_horizontal"
                android:text="@string/register" />

            <TextView
                android:id="@+id/textView6"
                style="@style/TextTitleSemiBold"
                android:layout_marginTop="20dp"
                android:text="@string/full_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_full_name_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_space"
                android:layout_marginEnd="@dimen/margin_space"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_full_name_register"
                    style="@style/editText"
                    android:layout_margin="0dp"
                    android:inputType="textPersonName" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView7"
                style="@style/TextTitleSemiBold"
                android:layout_marginTop="15dp"
                android:text="@string/email" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_email_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_space"
                android:layout_marginEnd="@dimen/margin_space"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_email_register"
                    style="@style/editText"
                    android:layout_margin="0dp"
                    android:inputType="textEmailAddress" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView8"
                style="@style/TextTitleSemiBold"
                android:layout_marginTop="15dp"
                android:text="@string/no_hp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_no_hp_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_space"
                android:layout_marginEnd="@dimen/margin_space"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_phone_register"
                    style="@style/editText"
                    android:layout_margin="0dp"
                    android:inputType="phone" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView9"
                style="@style/TextTitleSemiBold"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_space"
                android:layout_marginEnd="@dimen/margin_space"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_password_register"
                    style="@style/editText"
                    android:layout_margin="0dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView10"
                style="@style/TextTitleSemiBold"
                android:layout_marginTop="15dp"
                android:text="@string/retry_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layout_input_retry_password_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_space"
                android:layout_marginEnd="@dimen/margin_space"
                app:hintEnabled="false"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_retry_password_register"
                    style="@style/editText"
                    android:layout_margin="0dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_space"
                android:layout_marginTop="@dimen/margin_space"
                android:layout_marginEnd="@dimen/margin_space">

                <Button
                    android:id="@+id/btn_register"
                    style="@style/ButtonGradient"
                    android:layout_width="match_parent"
                    android:text="@string/register"
                    android:visibility="visible" />

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/sh_register"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/login"
                    android:visibility="gone">

                    <RelativeLayout
                        style="@style/ButtonGradient"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="45dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_centerHorizontal="true"
                            android:fontFamily="@font/poppins_semi_bold"
                            android:text="@string/please_wait"
                            android:textColor="@color/colorWhite"
                            android:textSize="14sp" />
                    </RelativeLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_space"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/TextRegular"
            android:text="@string/you_have_account" />

        <TextView
            android:id="@+id/login_here"
            style="@style/TextRegular"
            android:layout_marginStart="5dp"
            android:text="@string/login_here"
            android:textColor="@color/colorLightRed" />

    </LinearLayout>
</RelativeLayout>